tests/semantic_cases/valid/qualified_type_reference_exported.ob0
(* VALID: qualified type references with exported types are resolved across module boundaries *)
MODULE Main;
IMPORT B := ModuleB;
VAR x: B.IntType;
BEGIN
  x := 1
END Main.
