tests/semantic_cases/invalid/qualified_type_reference_non_exported.ob0
(* INVALID: qualified type references must respect export visibility *)
MODULE Main;
IMPORT B := ModuleB;
VAR x: B.HiddenType;
BEGIN
    x := 1
END Main.
